--- a/coffee.html
+++ b/coffee.html
@@ -16,7 +16,7 @@
         <h1>Coffee Shop</h1>
         <br>
 
-        <img id="coffee_image" src="LOLWUT" alt="make this image work" height="300" width="200">
+        <img id="coffee_image" src="" alt="make this image work" height="300" width="200">
 
         <h3 id="message">Click The Image To Order Coffee</h3>
 
@@ -56,8 +56,10 @@
     // myImage.addEventListener('click', function () {
     //     return makeCoffee();
     // });
-    $('#coffee_image').click(makeCoffee);
-
+    $('#coffee_image').click(function () { return makeCoffee('brew'); });
+    $('#espresso').click(function () { return makeCoffee('espresso'); });
+    $('#latte').click(function () { return makeCoffee('latte'); });
+    $('#hot-chocolate').click(function () { return makeCoffee('hot-chocolate'); });
 
     // function makeCoffee() {
     //      myImage.src = "static/coffee_machine.jpg";
@@ -65,12 +67,30 @@
     //      setTimeout(function() { myImage.setAttribute('src', "static/coffee_beans.jpg"); }, 1500);
     // }
 
-    function makeCoffee() {
+    var drinksOrdered = []
+    
+
+    function makeCoffee(drinkType) {
          $('#coffee_image').attr('src','static/coffee_machine.jpg');
-         setTimeout(function() { $('#coffee_image').attr('src','static/coffee_mug.jpg'); }, 500);
-         setTimeout(function() { $('#coffee_image').attr('src','static/coffee_beans.jpg'); }, 1500);
+         setTimeout(function() { $('#coffee_image').attr('src','static/coffee_mug.jpg'); }, 1500);
+         setTimeout(function() { $('#coffee_image').attr('src','static/coffee_beans.jpg'); }, 4000);
+         drinksOrdered.push(drinkType);
+         console.log(drinksOrdered);
+         var printRevenue = revenue();
+         $('#revenue').innnerText=printRevenue;
     }
 
+
+    var prices = {"brew": 2.05, "espresso": 3.25, "latte": 4.15, "hot-chocolate": 2.50};
+
+    function revenue() {
+        var totalRevenue = 0
+        for (var i = 0; i < drinksOrdered.length; i++) {
+            totalRevenue = totalRevenue + prices[drinksOrdered[i]];
+        }
+        console.log("Running total is " + totalRevenue);
+        return totalRevenue;
+    }
 
 </script>
 
